--- a/example/index.html
+++ b/example/index.html
@@ -9,7 +9,7 @@
     <script src="./font-party/jquery.js" type="text/javascript"></script>
     <script src="./font-party/font-party.js" type="text/javascript"></script>
     <meta name="keywords" content="FontParty, JavaScript, jQuery" />
-    <meta name="description" content="FontParty library. Replace any text block on a page with graphic characters."
+    <meta name="description" content="FontParty library. Replace any text block on a page with graphic characters." />
   </head>
   <body>
     
